correction logements version mobile

--- a/src/pages/Logements/logements.scss
+++ b/src/pages/Logements/logements.scss
@@ -253,6 +253,7 @@
 }
     .host{
         margin-top: 15px;
+        margin-right: 0px;
 }
 }
 
@@ -275,6 +276,7 @@
 }
     .host{
         margin-top: 15px;
+        margin-right: 0px;
 }
     .host-picture{
         width: 30%;
